修改了部分样式

--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
 
 <body>
     <header>
-        <div class="header-top clearfix">
-            <a href="#"><img src="./src/pic/logo.png" alt="acfunLogo"></a>
-            <div class="search clearfix">
-                <input type="text" name="search" placeholder="2017年6月Steam销量月榜">
-                <button class="iconfont icon-search"></button>
+        <div class="wrap">
+            <div class="header-top clearfix">
+                <a href="#"><img src="./src/pic/logo.png" alt="acfunLogo"></a>
+                <div class="search clearfix">
+                    <input type="text" name="search" placeholder="2017年6月Steam销量月榜">
+                    <button class="iconfont icon-search"></button>
+                </div>
+
+                <ul class="user clearfix">
+                    <li>
+                        <a href="#"><i class="iconfont icon-star" ></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="iconfont icon-upload"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="iconfont icon-clock4"></i></a>
+                    </li>
+                    <li>
+                        <a href="#">登录/注册</a>
+                    </li>
+                </ul>
+                <div class="download "><i class="iconfont icon-shouji"></i><a href="#">下载客户端</a></div>
+                <div class="game-center"><i class="iconfont icon-game"></i><a href="#">游戏中心</a></div>
             </div>
-
-            <ul class="user clearfix">
-                <li>
-                    <a href="#"><i class="iconfont icon-star" ></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="iconfont icon-upload"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="iconfont icon-clock4"></i></a>
-                </li>
-                <li>
-                    <a href="#">登录/注册</a>
-                </li>
-            </ul>
-            <div class="download "><i class="iconfont icon-shouji"></i><a href="#">下载客户端</a></div>
-            <div class="game-center"><i class="iconfont icon-game"></i><a href="#">游戏中心</a></div>
         </div>
-
         <div class="header-banner">
             <!--<img src="./src/pic/banner.jpg" alt="进化论这个问题，我们要好好谈一谈">-->
         </div>
@@ -61,7 +62,50 @@
         </nav>
     </header>
     <main>
-
+        <section>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+            <p>nihao</p>
+        </section>
     </main>
     <footer>
 
