--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="acfun.css">
     <link rel="stylesheet" href="src/font/iconfont.css">
     <title>AcFun弹幕视频网 - 认真你就输啦 (・ω・)ノ- ( ゜- ゜)つロ</title>
+    <script src="acfun.js" defer></script>
 </head>
 
 <body>
@@ -44,67 +45,282 @@
         </div>
         <nav class="clearfix">
             <ul>
-                <li class="active"><a href="#">首页</a></li>
-                <li><a href="#">番剧</a></li>
-                <li><a href="#">动画</a></li>
-                <li><a href="#">音乐</a></li>
-                <li><a href="#">舞蹈·彼女</a></li>
-                <li><a href="#">游戏</a></li>
-                <li><a href="#">娱乐</a></li>
-                <li><a href="#">科技</a></li>
-                <li><a href="#">体育</a></li>
-                <li><a href="#">鱼塘</a></li>
-                <li><a href="#">文章</a></li>
-                <li><a href="#">合辑</a></li>
+                <li class="active">
+                    <a href="#">首页</a>
+                </li>
+                <li>
+                    <a href="#">番剧</a>
+                </li>
+                <li class="more-group">
+                    <a href="#">动画</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>动画资讯</li>
+                        </a>
+                        <a href="#">
+                            <li>旧番补档</li>
+                        </a>
+                        <a href="#">
+                            <li>新番连载</li>
+                        </a>
+                        <a href="#">
+                            <li>MAD·AMV</li>
+                        </a>
+                        <a href="#">
+                            <li>MMD·3D</li>
+                        </a>
+                        <a href="#">
+                            <li>2.5次元</li>
+                        </a>
+                        <a href="#">
+                            <li>国产动画</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">音乐</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>原创·翻唱</li>
+                        </a>
+                        <a href="#">
+                            <li>演奏</li>
+                        </a>
+                        <a href="#">
+                            <li>Vocaloid</li>
+                        </a>
+                        <a href="#">
+                            <li>日系音乐</li>
+                        </a>
+                        <a href="#">
+                            <li>综合音乐</li>
+                        </a>
+                        <a href="#">
+                            <li>演唱会</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">舞蹈·彼女</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>宅舞</li>
+                        </a>
+                        <a href="#">
+                            <li>综合舞蹈</li>
+                        </a>
+                        <a href="#">
+                            <li>爱豆</li>
+                        </a>
+                        <a href="#">
+                            <li>手作</li>
+                        </a>
+                        <a href="#">
+                            <li>造型</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">游戏</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>主机单机</li>
+                        </a>
+                        <a href="#">
+                            <li>游戏集锦</li>
+                        </a>
+                        <a href="#">
+                            <li>电子竞技</li>
+                        </a>
+                        <a href="#">
+                            <li>英雄联盟</li>
+                        </a>
+                        <a href="#">
+                            <li>守望先锋</li>
+                        </a>
+                        <a href="#">
+                            <li>桌游卡牌</li>
+                        </a>
+                        <a href="#">
+                            <li>Mugen</li>
+                        </a>
+                        <a href="#">
+                            <li>游戏中心</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">娱乐</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>生活娱乐</li>
+                        </a>
+                        <a href="#">
+                            <li>鬼畜调教</li>
+                        </a>
+                        <a href="#">
+                            <li>萌宠</li>
+                        </a>
+                        <a href="#">
+                            <li>美食</li>
+                        </a>
+                        <a href="#">
+                            <li>综艺</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">科技</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>科学技术</li>
+                        </a>
+                        <a href="#">
+                            <li>教程</li>
+                        </a>
+                        <a href="#">
+                            <li>数码</li>
+                        </a>
+                        <a href="#">
+                            <li>汽车</li>
+                        </a>
+                        <a href="#">
+                            <li>广告</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">体育</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>综合体育</li>
+                        </a>
+                        <a href="#">
+                            <li>足球</li>
+                        </a>
+                        <a href="#">
+                            <li>篮球</li>
+                        </a>
+                        <a href="#">
+                            <li>搏击</li>
+                        </a>
+                        <a href="#">
+                            <li>11区体育</li>
+                        </a>
+                        <a href="#">
+                            <li>惊奇体育</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">鱼塘</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>历史</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">文章</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>文章综合</li>
+                        </a>
+                        <a href="#">
+                            <li>工作·情感</li>
+                        </a>
+                        <a href="#">
+                            <li>动漫文化</li>
+                        </a>
+                        <a href="#">
+                            <li>漫画·轻小说</li>
+                        </a>
+                        <a href="#">
+                            <li>游戏</li>
+                        </a>
+                    </ul>
+                </li>
+                <li class="more-group">
+                    <a href="#">合辑</a>
+                    <ul class="clearfix">
+                        <a href="#">
+                            <li>评论才是本体</li>
+                        </a>
+                    </ul>
+                </li>
                 <li class="rank"><i class="iconfont icon-rank"></i>全站排行榜</li>
-                <li class="line"></li>
             </ul>
+            <div class="moreGroupBg"></div>
         </nav>
     </header>
     <main>
         <section>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
-            <p>nihao</p>
+            <div class="carousel"></div>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
+            <p>nihao </p>
         </section>
     </main>
     <footer>
