--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="acfun.css">
     <link rel="stylesheet" href="src/font/iconfont.css">
     <title>AcFun弹幕视频网 - 认真你就输啦 (・ω・)ノ- ( ゜- ゜)つロ</title>
-    <script src="acfun.js" defer></script>
+    <script src="dist/bundle.js" defer></script>
 </head>
 
 <body>
@@ -254,73 +254,39 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div class="carousel"></div>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
-            <p>nihao </p>
+        <section class="carouselAndVideo center">
+            <div class="carousel-container">
+                <ul class="carousel clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/carousel1.jpg" alt="carousel1"></a>
+                        <p class="videoIntro">【绅GV】所以往后的剧情到底会怎样进行呢</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/carousel2.jpg" alt="carousel2"></a>
+                        <p class="videoIntro">2017年第26期 聊聊游戏界的女权</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/carousel3.png" alt="carousel3"></a>
+                        <p class="videoIntro">战姬绝唱 SymphogearAXZ 第2话</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/carousel4.png" alt="carousel4"></a>
+                        <p class="videoIntro">7月独家第三弹 动作女主 水果应援团 第1话</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/carousel5.jpg" alt="carousel5"></a>
+                        <p class="videoIntro">Acfun最大的坑比更新啦</p>
+                    </li>
+                </ul>
+                <ul class="bullet">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
         </section>
     </main>
     <footer>
