--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         </nav>
     </header>
     <main>
-        <section class="carouselAndVideo center">
-            <div class="carousel-container">
+        <section class="carouselAndVideo clearfix center">
+            <div class="carousel-container ">
                 <ul class="carousel clearfix">
                     <li>
                         <a href="#"><img src="src/pic/carousel1.jpg" alt="carousel1"></a>
@@ -286,7 +286,58 @@
                     <li></li>
                 </ul>
             </div>
-
+            <div class="video">
+                <ul class="videoList clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/1.gif" alt="gif"></a>
+                        <p class="videoTitle">实验需谨慎！实验失败傻缺集锦</p>
+                        <div class=videoIntro>
+                            <h4>实验需谨慎！实验失败傻缺集锦</h4>
+                            <p class="up-name">UP主：Mr_布鲁</p>
+                            <p>
+                                <span class="iconfont icon-play"><b> 12.4万<b></span>
+                                <span class="iconfont icon-3"><b> 302<b></span>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/2.gif" alt="gif"></a>
+                        <p class="videoTitle">《合金弹头》中的双结局你知道吗？</p>
+                        <div class="videoIntro">
+                            <h4>《合金弹头》中的双结局你知道吗？</h4>
+                            <p class="up-name">UP主：游研社</p>
+                            <p>
+                                <span class="iconfont icon-play"><b> 13.5万<b></span>
+                                <span class="iconfont icon-3"><b> 244<b></span>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/3.gif" alt="gif"></a>
+                        <p class="videoTitle">外国COS来了IANIME EXPO2017</p>
+                        <div class="videoIntro">
+                            <h4>外国COS来了IANIME EXPO2017</h4>
+                            <p class="up-name">UP主：琴吹口柚</p>
+                            <p>
+                                <span class="iconfont icon-play"><b> 15557</b></span>
+                                <span class="ionfont icon-3"><b> 38</b></span>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/4.jpg" alt="jpg"></a>
+                        <p class="videoTitle" s>【吖静】天上天下 极乐净土</p>
+                        <div class="videoIntro">
+                            <h4>天上天下 极乐净土</h4>
+                            <p class="up-name">UP主：吖静sizu222</p>
+                            <p>
+                                <span class="iconfont icon-play"><b> 23243</b></span>
+                                <span class="ionfont icon-3"><b> 43</b></span>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
