--- a/index.html
+++ b/index.html
@@ -339,6 +339,305 @@
                 </ul>
             </div>
         </section>
+        <section class="monkey-recommend center">
+            <h2>
+                <img src="src/icon/car.gif" alt="car.gif">
+                <i>猴子推荐</i>
+                <b>十分好评快来看啦</b>
+            </h2>
+            <div class="monkey-recommend-video">
+                <ul class="recommendVideoList">
+                    <li>
+                        <a href="#"><img src="src/pic/5.gif" alt="5.gif"></a>
+                        <a href="#">
+                            <p>不打工就进看守所</p>
+                        </a>
+                        <a href="#"><span>UP：王思妇</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/6.jpg" alt="6.jpg"></a>
+                        <a href="#">
+                            <p>在我的BGM里不可能打败我</p>
+                        </a>
+                        <a href="#"><span>UP：努巴尼守望先锋</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/7.png" alt="7.png"></a>
+                        <a href="#">
+                            <p>可怜的鸡！CS：GO小动画</p>
+                        </a>
+                        <a href="#"><span>UP：Gulkey</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/8.gif" alt="8.gif"></a>
+                        <a href="#">
+                            <p>去世神医，只赚黑心钱</p>
+                        </a>
+                        <a href="#"><span>UP：祖传格格</span></a>
+                    </li>
+                    <li><img src="src/pic/9.png" alt="9.png"></li>
+                </ul>
+            </div>
+        </section>
+        <section class="banna-rank center clearfix">
+            <div class="column-left">
+                <h2>
+                    <img src="src/icon/banna.gif" alt="banna.gif">
+                    <i>香蕉榜</i>
+                    <b>大力喂蕉不要停</b>
+                </h2>
+                <ul class="rank-type">
+                    <li id="week-rank">周榜</li>
+                    <li class="active" id="day-rank">日榜</li>
+                </ul>
+                <ul class="video-list active clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/banna1.jpg" alt="banna1.jpg"></a>
+                        <a href="#">
+                            <h4>【奥雷】韩国分段式恐怖片《恐怖故事》速看</h4>
+                        </a>
+                        <a href="#"><span>UP：奥雷卡尔克斯</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna2.gif" alt=""></a>
+                        <a href="#">
+                            <h4>【出不去系列】那些被雪藏的超赞视频(第7期)</h4>
+                        </a>
+                        <a href="#"><span>UP主：关注撸主三十年</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna3.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【逗鱼时刻】第116期 炉石传说真尼玛好玩</h4>
+                        </a>
+                        <a href=""><span>UP主：天天卡牌</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="src/pic/banna4.jpg" alt=""></a>
+                        <a href="">
+                            <h4>农村小伙儿自制潜水装备 为兄弟们准备了一顿海鲜大餐 @乡村安迪</h4>
+                        </a>
+                        <a href=""><span>UP主：乡村安迪</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="src/pic/banna5.jpg" alt=""></a>
+                        <a href="">
+                            <h4>【暴走大事件第五季】22 扎心街访之小学生和王者荣耀，卖火锅的小女孩走进童话版深夜食堂</h4>
+                        </a>
+                        <a href=""><span>UP主：暴走漫画</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="src/pic/banna6.jpg" alt=""></a>
+                        <a href="">
+                            <h4>【原翻听18】毕业颂！深夜乐堂怎么感觉好灵异的感觉</h4>
+                        </a>
+                        <a href=""><span>UP主：我晕毛线</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="src/pic/banna7.jpg" alt=""></a>
+                        <a href="">
+                            <h4>【主播真会玩】98：没错！我就是千王之王！</h4>
+                        </a>
+                        <a href=""><span>UP主：起小点是大腿</span><i>🍌6666</i></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="src/pic/banna8.jpg" alt=""></a>
+                        <a href="">
+                            <h4>中国交通事故合集20170712：每天10分钟最新国内车祸实例，助你提高安全意识。</h4>
+                        </a>
+                        <a href=""><span>UP主：交通事故video</span><i>🍌6666</i></a>
+                    </li>
+                </ul>
+                <ul class="video-list  clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/banna9.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【阅后即瞎】你爹给你起名字时负责任吗？这儿还有更随便的</h4>
+                        </a>
+                        <a href="#"><span>UP主：阅后即瞎</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna10.gif" alt=""></a>
+                        <a href="#">
+                            <h4>听歌喝酒看评论，网易云上评论过万的歌曲，终结篇~谢谢大家一路来的支持，谢谢...谢谢</h4>
+                        </a>
+                        <a href="#"><span>UP主：丶李米椒</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna11.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【神医RAP】我还治不死你？</h4>
+                        </a>
+                        <a href="#"><span>UP主：点滴菌</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna12.jpeg" alt=""></a>
+                        <a href="#">
+                            <h4>食欲不振怎么办，自助旅行自助餐 @野食小哥</h4>
+                        </a>
+                        <a href="#"><span>UP主：野食小哥</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna13.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【男孩】-【卖血】我的盆友圈真精彩</h4>
+                        </a>
+                        <a href="#"><span>UP主：卖血上网a</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna14.gif" alt=""></a>
+                        <a href="#">
+                            <h4>STEAM销量周榜2017年第26期 聊聊游戏界的女权</h4>
+                        </a>
+                        <a href="#"><span>UP主：SteamParty</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna15.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【李云龙】王♂妃</h4>
+                        </a>
+                        <a href="#"><span>UP主：祸乱之源</span><i>🍌66666</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="src/pic/banna16.jpeg" alt=""></a>
+                        <a href="#">
+                            <h4>农村小伙儿用石磨做咖啡 送给雨天辛苦干活的农民工 @乡村安迪</h4>
+                        </a>
+                        <a href="#"><span>UP主：乡村安迪</span><i>🍌66666</i></a>
+                    </li>
+                </ul>
+                <div class="guided-vision">
+                    <img src="src/pic/japan.jpg" alt="">
+                </div>
+            </div>
+            <div class="column-right">
+                <div class="article">
+                    <h2>
+                        <img src="src/icon/article.gif" alt="banna.gif">
+                        <b>文章</b>
+                    </h2>
+                    <ul class="article-type">
+                        <li class="active">
+                            <a href="#">综合</a>
+                        </li>
+                        <li>
+                            <a href="#">工作情感</a>
+                        </li>
+                        <li>
+                            <a href="#">动漫文化</a>
+                        </li>
+                        <li>
+                            <a href="#">漫画小说</a>
+                        </li>
+                        <li>
+                            <a href="#">游戏</a>
+                        </li>
+                    </ul>
+                    <ul class="article-list">
+                        <li class="active">
+                            <div class="article-img-intro  clearfix">
+                                <a href="#"><img src="src/pic/article1.png" alt=""></a>
+                                <h5>咬人画的-夏日储备食品</h5>
+                                <span>豪华夏日狗粮天天半价了！</span>
+                                <span class="up"><a href="">UP:自动贩卖机</a></span>
+                                <i class="iconfont icon-msg">157</i>
+                            </div>
+                            <p><a href="#">法德将联合领导研制欧洲新一代战机 有望于2018年共同完成项目路线图</a></p>
+                            <p><a href="#">阿里股价涨破150美元创新高 市值一度突破3850亿美元</a></p>
+                            <p><a href="#">女子违规带充电宝乘飞机被查 大喊“把我抓起来”</a></p>
+                            <p><a href="#">格力做手机为什么不像小米做家电那样过渡那么好？</a></p>
+                            <p><a href="#">学医是"赔本买卖"?人民日报:莫让医学生吃苦又</a></p>
+                            <p><a href="#">《凡人修仙传》动画电影超长PV 血色禁地大战黑蛟</a></p>
+                            <p><a href="#">“北京五气”是啥？的哥靠它骗游客20倍钱</a></p>
+                            <p><a href="#">说说你小时候看过印象最深的动画片</a></p>
+                            <p><a href="#">山东健跑队回应集体穿反光服:并非“对抗”舆论</a></p>
+                            <p><a href="#">【十年武林路】2006-2016《武林外传》网游发展史全程回顾</a></p>
+                            <a href="#" class="view-more">查看更多></a>
+                        </li>
+                        <li>
+                            <div class="article-img-intro clearfix">
+                                <a href="#"><img src="src/pic/article2.jpg" alt=""></a>
+                                <h5>这是一个悲伤的问题</h5>
+                                <span>死宅如何才能变现充</span>
+                                <span class="up"><a href="">UP:普通的奶飞天</a></span>
+                                <i class="iconfont icon-msg">79</i>
+                            </div>
+                            <p><a href="#">求助acer关于男女消费的问题</a></p>
+                            <p><a href="#">有一点关于编程语言的困惑</a></p>
+                            <p><a href="#">老实人就应该原谅吗</a></p>
+                            <p><a href="#">你知道跑酷的真正意义吗</a></p>
+                            <p><a href="#">不想再继续混下去了</a></p>
+                            <p><a href="#">为什么我这样的人会至今单身20年 开始对恋爱</a></p>
+                            <p><a href="#">回想起一件事，想问问是不是大多数人都或多或</a></p>
+                            <p><a href="#">我又来了，就是那个之前在图书馆要妹子微信号</a></p>
+                            <p><a href="#">死宅如何现充 求肥肥们指点出路</a></p>
+                            <p><a href="#">朱军 这个钱我需要去要么 续</a></p>
+                            <a href="#" class="view-more">查看更多></a>
+                        </li>
+                        <li>
+                            <div class="article-img-intro clearfix">
+                                <a href="#"><img src="src/pic/article3.jpg" alt=""></a>
+                                <h5>《凡人修仙传》</h5>
+                                <span>动画电影先导预告公布！</span>
+                                <span class="up"><a href="">UP:会计</a></span>
+                                <i class="iconfont icon-msg">217</i>
+                            </div>
+                            <p><a href="#">《神薙》漫画最终卷详情公布 男女主终于修成正果</a></p>
+                            <p><a href="#">是支持换声优还是支持保留种田梨沙？一位种田梨沙粉丝吐露自己的苦闷</a></p>
+                            <p><a href="#">说说你小时候看过印象最深的动画片</a></p>
+                            <p><a href="#">《凡人修仙传》动画电影超长PV 血色禁地大战黑蛟</a></p>
+                            <p><a href="#">【有剧透】《大护法》——可能是制作最精良的COC TRPG实况（误）</a></p>
+                            <p><a href="#">《银魂》真人剧“三叶篇”先行 浮夸演技笑爆全场</a></p>
+                            <p><a href="#">可爱爆炸，GSC推出「女神异闻录5」摩尔加纳粘土人，提供16种表情组合！</a></p>
+                            <p><a href="#">《狂赌之渊》动画第3话先行图 赌神大战腹黑学姐</a></p>
+                            <p><a href="#">国产网文哭了！最新轻小说销量榜第一位居然是它</a></p>
+                            <p><a href="#">《你的名字》立花泷与宫水三叶粘土人 新的狗粮已就位</a></p>
+                            <a href="#" class="view-more">查看更多></a>
+                        </li>
+                        <li>
+                            <div class="article-img-intro clearfix">
+                                <a href="#"><img src="src/pic/article4.jpg" alt=""></a>
+                                <h5>【漫画】银魂 #643</h5>
+                                <span>路飞乱入是闹哪儿样！</span>
+                                <span class="up"><a href="">UP:冰块儿w</a></span>
+                                <i class="iconfont icon-msg">30</i>
+                            </div>
+                            <p><a href="#">史上最雷人武侠：刀神传说（15）</a></p>
+                            <p><a href="#">银魂643 | 血與淚</a></p>
+                            <p><a href="#">《我的反派学院》 第一章：自我判断与现实</a></p>
+                            <p><a href="#">SCP-1527</a></p>
+                            <p><a href="#">【漫画】你与我死去的妹妹很像 ·第一话</a></p>
+                            <p><a href="#">【漫画】无法暴露的兄妹·第01话·1话：她很荒唐</a></p>
+                            <p><a href="#">【漫画】无法暴露的兄妹·第02话·2话：此女百事无成</a></p>
+                            <p><a href="#">【漫画】小马官漫 主线56章</a></p>
+                            <p><a href="#">【漫画】异世界居酒屋·第四话：酱汁汤豆腐</a></p>
+                            <p><a href="#">【漫画】八云小姐想要喂食 #15</a></p>
+                            <a href="#" class="view-more">查看更多></a>
+                        </li>
+                        <li>
+                            <div class="article-img-intro clearfix">
+                                <a href="#"><img src="src/pic/article5.jpg" alt=""></a>
+                                <h5>【DOTA2】不朽3更新</h5>
+                                <span>大剑？额外？不存在的！</span>
+                                <span class="up"><a href="">UP:DotASell平台</a></span>
+                                <i class="iconfont icon-msg">108</i>
+                            </div>
+                            <p><a href="#">[访谈]全美体育 守望联赛将是下一个英超</a></p>
+                            <p><a href="#">Steam将采用新游戏推荐机制 提升作品曝光度</a></p>
+                            <p><a href="#">官方给出新定义 《绝地求生》鼠标宏判为外挂</a></p>
+                            <p><a href="#">《CS：GO》里有一群无所事事的鸡，它们什么来</a></p>
+                            <p><a href="#">DOTA2美国时间2017年7月14日更新解析</a></p>
+                            <p><a href="#">WOW蓝贴：冰霜死骑不能同时选择杀戮和寒冬</a></p>
+                            <p><a href="#">守望先锋世界杯次日：中国队表现强劲 零封挪威</a></p>
+                            <p><a href="#">【十年武林路】2006-2016《武林外传》网游发展史</a></p>
+                            <p><a href="#">B社瞄准中国，《恶灵附身2》更新繁体中文支持</a></p>
+                            <p><a href="#">主播收到《COD14》包裹被吓坏：凶宅僵尸吃人</a></p>
+                            <a href="#" class="view-more">查看更多></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
